--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,34 +1,36 @@
 @import "./../../libs/variables.scss";
 
 .header {
-    padding: 15px $sidepaddings;
-    display: flex;
-    justify-content: space-between;
-}
+  padding: 15px $sidePadding;
 
-h1 {
+  display: flex;
+  justify-content: space-between;
+
+  h1 {
     margin: 0;
-}
+  }
 
-nav {
+  nav {
     ul {
-        list-style: none;
-        display: flex;
+      list-style: none;
+      display: flex;
 
-        a {
-            text-decoration: none;
-            color: $main;
-            padding: 15px;
-            transition: $baseTransition;
+      a {
+        text-decoration: none;
+        color: $main;
+        padding: 15px;
+        transition: $baseTransition;
 
-            &:hover {
-                background-color: lighten($main, 40%);
-            }
-
-            &.active {
-                background-color: $main;
-                color: $white;
-            }
+        &:hover {
+          // .header nav ul a:hover { ... }
+          background-color: lighten($main, 40%);
         }
+
+        &.active {
+          background-color: $main;
+          color: $white;
+        }
+      }
     }
+  }
 }
