--- a/src/libs/variables.scss
+++ b/src/libs/variables.scss
@@ -1,9 +1,10 @@
-
-//colors
+// Colors
 $main: #3498db;
 $white: #fff;
+$lightGray: #ecf0f1;
 
-// Transition
-$baseTransition: all 0.4 ease;
-//box
-$sidepaddings: 30px;
+// Transitions
+$baseTransition: all 0.4s ease;
+
+// Box
+$sidePadding: 30px;
