--- a/src/libs/variables.scss
+++ b/src/libs/variables.scss
@@ -1,5 +1,7 @@
+@import url("https://fonts.googleapis.com/css2?family=Mohave:wght@400;700&family=Press+Start+2P&family=Pushster&display=swap");
 // Colors
 $main: #3498db;
+$secondary: #323232;
 $white: #fff;
 $lightGray: #ecf0f1;
 
@@ -8,3 +10,6 @@ $baseTransition: all 0.4s ease;
 
 // Box
 $sidePadding: 30px;
+
+// Fonts
+$fancyFont: "Pushster", cursive;
