--- a/src/pages/Friends/Friends.module.scss
+++ b/src/pages/Friends/Friends.module.scss
@@ -1,3 +1,5 @@
+@import "./../../libs/variables.scss";
+
 .Friends {
   display: flex;
   flex-direction: column;
@@ -12,13 +14,23 @@
   .__friendsList {
     display: flex;
     justify-content: center;
-    margin: 60px 20px;
+    margin: 60px 0;
     flex-wrap: wrap;
     width: 100%;
+    height: 250px;
+    border-bottom: 2px solid $main;
+
+    overflow-x: hidden;
 
     > * {
       width: 300px;
       margin: 20px 0;
     }
+  }
+
+  .__pagination {
+    display: flex;
+    justify-content: center;
+    width: 100%;
   }
 }
